--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.1.1",
 	"appid": "touristappid",
-	"projectname": "demo-%E5%B0%8F%E7%A8%8B%E5%BA%8F",
+	"projectname": "wy",
 	"condition": {
 		"search": {
 			"current": -1,
